force-app/main/default/objects/IFv2_RequestExtension2__c/IFv2_RequestExtension2__c.object-meta.xml
<CustomObject>
    <description>Hold the requests of the EMEA region</description>
    <label>Request Extension 2 - EMEA</label>
    <nameField>
        <label>Request Extension 2 - EMEA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Extension 2 - EMEA</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>