force-app/main/default/objects/IFv2_RequestExtension2__c/fields/AddtionalVehicleOnly__c.field-meta.xml
<CustomField>
    <fullName>AddtionalVehicleOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Badgemanagement Workflow</description>
    <label>Addtional vehicle only</label>
    <type>Checkbox</type>
</CustomField>