force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>