force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory)</description>
    <label>Building</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>St1</fullName>
                <label>ST1</label>
            </value>
            <value>
                <fullName>St2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>