force-app/main/default/objects/IFv2_RequestExtension2__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information =external)</description>
    <label>Contact person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>