force-app/main/default/objects/IFv2_RequestExtension2__c/fields/DateTimefrom__c.field-meta.xml
<CustomField>
    <fullName>DateTimefrom__c</fullName>
    <label>Date/Time from</label>
    <type>DateTime</type>
</CustomField>