force-app/main/default/objects/IFv2_RequestExtension2__c/fields/DateTimeuntil__c.field-meta.xml
<CustomField>
    <fullName>DateTimeuntil__c</fullName>
    <label>Date/Time until</label>
    <type>DateTime</type>
</CustomField>