force-app/main/default/objects/IFv2_RequestExtension2__c/fields/DefinedParkingPlace__c.field-meta.xml
<CustomField>
    <fullName>DefinedParkingPlace__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Badgemanagement Workflow</description>
    <label>Defined parking place</label>
    <type>Checkbox</type>
</CustomField>