force-app/main/default/objects/IFv2_RequestExtension2__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>IF(
				OR(
								MONTH(DATEVALUE(CreatedDate)) = 11,
								MONTH(DATEVALUE(CreatedDate)) = 12
				),
(DATE (YEAR (DATEVALUE(CreatedDate))+1, 12, 31)), 
(DATE (YEAR (DATEVALUE(CreatedDate)), 12, 31)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>