force-app/main/default/objects/IFv2_RequestExtension2__c/fields/EmailAddressofContactperson__c.field-meta.xml
<CustomField>
    <fullName>EmailAddressofContactperson__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information =external)</description>
    <label>Email address of contact person</label>
    <type>Email</type>
</CustomField>