force-app/main/default/objects/IFv2_RequestExtension2__c/fields/EmailAddy__c.field-meta.xml
<CustomField>
    <fullName>EmailAddy__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory)</description>
    <label>Email Addy</label>
    <type>Email</type>
</CustomField>