force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Employee_Name_11__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_11__c</fullName>
    <label>Mitarbeiter Name, Vorname 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>