force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Employee_Number_12__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number_12__c</fullName>
    <label>Personalnummer des Mitarbeiters 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>