force-app/main/default/objects/IFv2_RequestExtension2__c/fields/EmployeeName__c.field-meta.xml
<CustomField>
    <fullName>EmployeeName__c</fullName>
    <description>Holds Employee Name</description>
    <inlineHelpText>Enter Employee Name</inlineHelpText>
    <label>Employee Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>