force-app/main/default/objects/IFv2_RequestExtension2__c/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <description>Employee Number</description>
    <inlineHelpText>Enter Employee Numbers</inlineHelpText>
    <label>Employee Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>