force-app/main/default/objects/IFv2_RequestExtension2__c/fields/ExternalCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ExternalCompanyName__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information =external)</description>
    <label>External company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>