force-app/main/default/objects/IFv2_RequestExtension2__c/fields/ForDepartment__c.field-meta.xml
<CustomField>
    <fullName>ForDepartment__c</fullName>
    <label>For Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>