force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Gate1__c.field-meta.xml
<CustomField>
    <fullName>Gate1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Badgemanagement Workflow</description>
    <label>Gate 1</label>
    <type>Checkbox</type>
</CustomField>