force-app/main/default/objects/IFv2_RequestExtension2__c/fields/LicensePlate2__c.field-meta.xml
<CustomField>
    <fullName>LicensePlate2__c</fullName>
    <description>Used for Badgemanagement Workflow</description>
    <label>License plate 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>