force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Licenseplate3a__c.field-meta.xml
<CustomField>
    <fullName>Licenseplate3a__c</fullName>
    <description>Used in Badge Management SEG-Stuttgart</description>
    <label>License plate 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>