force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Licenseplate_a__c.field-meta.xml
<CustomField>
    <fullName>Licenseplate_a__c</fullName>
    <description>Used in Badge Management SEG-Stuttgart</description>
    <label>License plate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>