force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Linktotemplate__c.field-meta.xml
<CustomField>
    <fullName>Linktotemplate__c</fullName>
    <defaultValue>&quot;https://seg--WF.cs88.my.salesforce.com/sfc/p/9E0000000OxM/a/9E00000008bd/NXEOpWzLnYYJxEuvsWzMglERHh63fIiBBaCMRYOiqqc&quot;</defaultValue>
    <label>Link to template</label>
    <type>Url</type>
</CustomField>