force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Picklist used for Badge Management Workflow (mandatory for Badge Management)</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>