force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Measuresforprevention__c.field-meta.xml
<CustomField>
    <fullName>Measuresforprevention__c</fullName>
    <label>Measures for prevention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>