force-app/main/default/objects/IFv2_RequestExtension2__c/fields/NameVorundNachname__c.field-meta.xml
<CustomField>
    <fullName>NameVorundNachname__c</fullName>
    <description>Used for Badgemanagement (mandatory)</description>
    <label>Name: Vor- und Nachname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>