force-app/main/default/objects/IFv2_RequestExtension2__c/fields/OthersPleaseSpecify__c.field-meta.xml
<CustomField>
    <fullName>OthersPleaseSpecify__c</fullName>
    <description>Used in HU scrapping workflow</description>
    <label>Others (Please Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>