force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Overtime</fullName>
            </value>
            <value>
                <fullName>time off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>