force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Personnelbatchnumber__c.field-meta.xml
<CustomField>
    <fullName>Personnelbatchnumber__c</fullName>
    <description>Used for Badgemanagement Workflow (optional field)</description>
    <label>Personnel / batch number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>