force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory)</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>