force-app/main/default/objects/IFv2_RequestExtension2__c/fields/PLZ__c.field-meta.xml
<CustomField>
    <fullName>PLZ__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information =external)</description>
    <label>PLZ ORT/CITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>