force-app/main/default/objects/IFv2_RequestExtension2__c/fields/PSP__c.field-meta.xml
<CustomField>
    <fullName>PSP__c</fullName>
    <label>PSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>