force-app/main/default/objects/IFv2_RequestExtension2__c/fields/ReasonofRequest__c.field-meta.xml
<CustomField>
    <fullName>ReasonofRequest__c</fullName>
    <label>Reason of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>