force-app/main/default/objects/IFv2_RequestExtension2__c/fields/ReasonPicklist__c.field-meta.xml
<CustomField>
    <fullName>ReasonPicklist__c</fullName>
    <description>Picklist used in HU Scrapping</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>EZ 0 Serial</fullName>
            </value>
            <value>
                <fullName>EZ Design Change</fullName>
            </value>
            <value>
                <fullName>EZRS Design Change</fullName>
            </value>
            <value>
                <fullName>Not used any longer</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Supplier fault</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>