force-app/main/default/objects/IFv2_RequestExtension2__c/fields/ReminderDate__c.field-meta.xml
<CustomField>
    <fullName>ReminderDate__c</fullName>
    <description>Set date to created + 1 year</description>
    <formula>DueDate__c - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>