force-app/main/default/objects/IFv2_RequestExtension2__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information =external)</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>