force-app/main/default/objects/IFv2_RequestExtension2__c/validationRules/DateTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DateTimeValidation</fullName>
    <active>true</active>
    <description>Validation rule to ensure To Date/End Date is greater than From Date/Start Date</description>
    <errorConditionFormula>DateTimeuntil__c &lt;  DateTimefrom__c</errorConditionFormula>
    <errorMessage>Date/Time Until must be greater than Date/Time From</errorMessage>
</ValidationRule>